Initial Changes for I3 with Rumba32 board

--- a/src/Repetier/platformio.ini
+++ b/src/Repetier/platformio.ini
@@ -20,7 +20,7 @@
 ;     adafruit_grandcentral_m4
 ; STM32 based
 ;     RUMBA32
-default_envs = due
+default_envs = RUMBA32
 ; env_default = stacker_3d_superboard
 ; lib_deps = 
 ; Set upload port if autodetect does not work
